# python-notes

SQL/: app.py  pyproject.toml  test.db
auction/: alembic.ini  app.py  database.py  pyproject.toml
auction/alembic/: env.py
auction/alembic/versions/: 28ed5cf6c9a1_initial_migration.py  3b7069f0c2b3_initial_migration.py
auction/models/: bid.py  comment.py  listing.py  user_model.py  wishlist.py
auction/static/: styles.css
auction/templates/: base.html  categories.html  create_listing.html  home.html  login.html  product.html  profile.html  register.html
decorators/: caching-decorator.py  time-of-func.py
python0/: calculator.py  cat.py  conditionals.py  grade.py  hello.py  hogwarts.py  number.py  parity.py
python1/Et Cetera/: bank.py  gryffindors.py  houses.py  meows.py  sleep.py  unpack.py  yell.py
python1/OOPs/: hat.py  student.py  testing.py  vault.py  wizard.py
python1/filesIO/: names.py  names_read.py
python1/libraries/: generate.py  itunes.py  name.py  say.py
python1/regular-expressions/: format.py  twitter.py  validate.py
python1/unit testing/: calculator.py  hello.py
python1/unit testing/tests/: test_calculator.py  test_hello.py
python2/: cartesian products  testing.py
python3/: sequenceOfWords.py
python6/: hello.html  link.html
python6/fastapi-tut/: myapi.py
random-stuff/: caching-decorator.py  debugging-func-call.py
wiki-fastapi/: app.py  pyproject.toml
wiki-fastapi/entries/: Git and Github.md
wiki-fastapi/templates/: create.html  display.html  edit.html  index.html
wiki-fastapi/utils/: files_util.py  markdown_util.py
(+1 files in other folders)
