[tool.poetry]
name = "sql"
version = "0.1.0"
description = ""
authors = ["rishi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
black = "^25.1.0"
isort = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
