[tool.poetry]
name = "auction"
version = "0.1.0"
description = ""
authors = ["Rishi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
python-multipart = "^0.0.20"
python-dotenv = "^1.0.1"
black = "^25.1.0"
isort = "^6.0.0"
alembic = "^1.14.1"
jinja2 = "^3.1.5"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
