[tool.poetry]
name = "wiki-fastapi"
version = "0.1.0"
description = ""
authors = ["Rishi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"
markdown2 = "^2.5.3"
black = "^25.1.0"
isort = "^6.0.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
